# Cedarflake-lab

./: .gitattributes  .gitignore  AGENTS.md  README.md  WentUrc_ASCII_Art_Tool.spec  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  tsconfig.base.json  tsconfig.node.json  vite.config.ts
.github/: SECURITY.md
src/: App.tsx  (+3 more)
workbench/media/ascii-art/: .gitignore  README.md  cedarflake-ascii-art.spec  pyproject.toml
workbench/media/ascii-art/cedarflake_ascii_art/: cli.py  config.py  main.py
workbench/media/ascii-art/cedarflake_ascii_art/image_processing/: converter_png.py  converter_txt.py
workbench/media/ascii-art/configs/: config.example.yaml
workbench/media/ascii-art/tests/: test_image_processing.py
workbench/network/campus-net/: .gitignore  README.md  build.spec  config.example.json  config.legacy.example.json  gui.spec  gui_main.py  main.py  pyproject.toml
workbench/network/campus-net/campus_net/: __init__.py  aggregate.py  application.py  captive.py  config.py  config_paths.py  config_store.py  gui.py  gui_core.py  interactive.py  interfaces.py  legacy.py  runner.py  sso.py  window_state.py
workbench/network/campus-net/docs/: new-portal-adaptation.md
workbench/network/campus-net/tests/: test_aggregate.py  test_application.py  test_captive.py  test_captive_config.py  test_config.py  test_config_paths.py  test_config_store.py  test_gui_core.py  test_gui_entry.py  test_legacy.py  test_main.py  test_runner.py  test_sso.py  test_window_state.py
workbench/network/campus-net/workflows/: build.example.yml
(+793 files in other folders)
