[project]
name = "cedarflake-ascii-art"
version = "1.0.0"
description = "Convert images and videos into ASCII art."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Cedarflake" },
]
dependencies = [
  "click==8.3.3",
  "numpy==2.1.3",
  "opencv-python==4.10.0.84",
  "pillow==12.3.0",
  "pyyaml==6.0.2",
]

[dependency-groups]
dev = [
  "pyinstaller>=6.11,<7",
]

[tool.uv]
package = false
