[project]
name = "cedarflake-campus-net"
version = "1.0.0"
description = "Log in to a Ruijie campus network portal."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Cedarflake" },
]
dependencies = [
  "aiohttp>=3.12.0,<4",
]

[dependency-groups]
dev = [
  "pyinstaller>=6.11,<7",
]

[tool.uv]
package = false
