[project]
name = "cedarflake-campus-net"
version = "1.0.0"
description = "Connect through legacy and captive SSO Ruijie campus portals."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Cedarflake" },
]
dependencies = [
  "aiohttp>=3.12.0,<4",
  "pillow>=11.0.0,<13",
  "pycryptodome>=3.21.0,<4",
  "ttkbootstrap>=1.10,<2",
]

[dependency-groups]
dev = [
  "pyinstaller>=6.11,<7",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = []
